white background and logo updated

--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <link rel="icon" href="/assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>TEMPLATE Domains - Permissionless Web3 Domains</title>
+    <title>The Wild Bunch Domains</title>
 
-    <meta name="description" content="Decentralized domain name service with .TEMPLATE domain running on XYZ blockchain.">
+    <meta name="description" content="The Wild Bunch NFT community presents .wildbunch domains!">
     <meta name="keywords" content="domains, domain, DNS, TLD, blockchain, crypto, chain">
     <meta name="author" content="Tempe Techie">
 
-    <meta property="og:title" content="TEMPLATE Domains - Permissionless Web3 Domains" />
-    <meta property="og:description" content="Decentralized domain name service with .TEMPLATE domain running on XYZ blockchain." />
-    <meta property="og:image" content="https://TEMPLATE.domains/assets/cover.png" />
+    <meta property="og:title" content="The Wild Bunch Domains" />
+    <meta property="og:description" content="The Wild Bunch NFT community presents .wildbunch domains!" />
+    <meta property="og:image" content="https://wildbunch.domains/assets/cover.png" />
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@PunkDomains">
-    <meta name="twitter:creator" content="@PunkDomains">
-    <meta name="twitter:title" content="TEMPLATE Domains - Permissionless Web3 Domains">
-    <meta name="twitter:description" content="Decentralized domain name service with .TEMPLATE domain running on XYZ blockchain.">
-    <meta name="twitter:image" content="https://TEMPLATE.domains/assets/cover.png">
+    <meta name="twitter:site" content="@TheWildBunchNFT">
+    <meta name="twitter:creator" content="@TheWildBunchNFT">
+    <meta name="twitter:title" content="The Wild Bunch Domains">
+    <meta name="twitter:description" content="The Wild Bunch NFT community presents .wildbunch domains!">
+    <meta name="twitter:image" content="https://wildbunch.domains/assets/cover.png">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-VGZF9SCYXB"></script>
