--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
     <meta property="og:title" content="The Wild Bunch Domains" />
     <meta property="og:description" content="The Wild Bunch NFT community presents .wildbunch domains!" />
-    <meta property="og:image" content="https://wildbunch.domains/assets/cover.png" />
+    <meta property="og:image" content="https://twb.punk.domains/assets/cover.png" />
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@TheWildBunchNFT">
     <meta name="twitter:creator" content="@TheWildBunchNFT">
     <meta name="twitter:title" content="The Wild Bunch Domains">
     <meta name="twitter:description" content="The Wild Bunch NFT community presents .wildbunch domains!">
-    <meta name="twitter:image" content="https://wildbunch.domains/assets/cover.png">
+    <meta name="twitter:image" content="https://twb.punk.domains/assets/cover.png">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-VGZF9SCYXB"></script>
